# project_template

./: .gitignore  README_cookiecutter_test.md
template_user/analysis/: template_python.ipynb
template_user/resources/: utils.py
{{cookiecutter.project_name}}/: DESCRIPTION  pyproject.toml
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: setup_project.py
