[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "test_cookiecutter"
version = "0.1.0"
description = "Template project for Melé lab"
readme = "README.md"
requires-python = ">=3.7"

# <-- Add your required Python packages here
dependencies = [
    "pandas",
    "numpy",
    "pyyaml"
]

[tool.setuptools.packages.find]
where = ["."]
